Commit remote changes.

--- a/src/com/prealpha/extempdb/client/article/ArticleMessages.properties
+++ b/src/com/prealpha/extempdb/client/article/ArticleMessages.properties
@@ -8,3 +8,5 @@ dateLabel			= Date
 retrievalDateLabel	= Retrieved
 sourceLabel			= Source
 tagsLabel			= Tags
+addMappingButton	= Add...
+submitMappingButton	= Submit
