Add mapping input in the article view.

--- a/src/com/prealpha/extempdb/client/article/ArticleMessages.properties
+++ b/src/com/prealpha/extempdb/client/article/ArticleMessages.properties
@@ -1,12 +1,13 @@
 # ArticleMessages.properties
-# Copyright (C) 2010 Meyer Kizner
+# Copyright (C) 2011 Meyer Kizner
 # All rights reserved.
 
-idLabel				= ID
-bylineLabel			= Byline
-dateLabel			= Date
-retrievalDateLabel	= Retrieved
-sourceLabel			= Source
-tagsLabel			= Tags
-addMappingButton	= Add...
-submitMappingButton	= Submit
+idLabel					= ID
+bylineLabel				= Byline
+dateLabel				= Date
+retrievalDateLabel		= Retrieved
+sourceLabel				= Source
+tagsLabel				= Tags
+addMappingButton		= Add...
+submitMappingButton		= Submit
+mappingAlreadyExists	= Mapping already exists!
