Add display for user points in the main view.

--- a/src/com/prealpha/extempdb/client/main/MainMessages.properties
+++ b/src/com/prealpha/extempdb/client/main/MainMessages.properties
@@ -1,5 +1,5 @@
 # MainMessages.properties
-# Copyright (C) 2010 Meyer Kizner
+# Copyright (C) 2011 Meyer Kizner
 # All rights reserved.
 
 username			= Username:
@@ -28,3 +28,5 @@ usageText			= There currently two main means of navigating the database: \
 						link to the list of relevant articles for each topic. \
 						The full text of each article is available from the \
 						article list.
+
+pointsHeading		= Points
