Commit some general changes and improvements.

--- a/src/com/prealpha/extempdb/client/settings/SettingsMessages.properties
+++ b/src/com/prealpha/extempdb/client/settings/SettingsMessages.properties
@@ -1,5 +1,5 @@
 # ToolsMessages.properties
-# Copyright (C) 2010 Meyer Kizner
+# Copyright (C) 2011 Meyer Kizner
 # All rights reserved.
 
 noPermission	= You do not have permission to view this page.
@@ -8,7 +8,7 @@ tagManagement	= Tag management
 tagLabel		= Tag:
 searchedLabel	= Searched?
 parentLabel		= Parent(s):
-saveButton		= Save
+updateButton	= Update
 deleteButton	= Delete
 resetButton		= Reset
 
