Add support for adding articles on the client-side from URLs.

--- a/src/com/prealpha/extempdb/client/settings/SettingsMessages.properties
+++ b/src/com/prealpha/extempdb/client/settings/SettingsMessages.properties
@@ -1,29 +1,38 @@
-# ToolsMessages.properties
+# SettingsMessages.properties
 # Copyright (C) 2011 Meyer Kizner
 # All rights reserved.
 
-noPermission	= You do not have permission to view this page.
+noPermission			= You do not have permission to view this page.
 
-tagManagement	= Tag management
-tagLabel		= Tag:
-searchedLabel	= Searched?
-parentLabel		= Parent(s):
-updateButton	= Update
-deleteButton	= Delete
-resetButton		= Reset
+tagManagement			= Tag management
+tagLabel				= Tag:
+searchedLabel			= Searched?
+parentLabel				= Parent(s):
+updateButton			= Update
+deleteButton			= Delete
+resetButton				= Reset
 
-saveNoParent	= Are you sure you want to save a tag without a parent?
-noTagInput		= Input a tag name first!
-noTagLoaded		= Wait for the tag to load first.
+saveNoParent			= Are you sure you want to save a tag without a parent?
+noTagInput				= Input a tag name first!
+noTagLoaded				= Wait for the tag to load first.
 
-changePassword	= Change password
-currentPassword	= Current password:
-newPassword		= New password:
-confirmPassword	= Confirm password:
-submitButton	= Submit
+changePassword			= Change password
+currentPassword			= Current password:
+newPassword				= New password:
+confirmPassword			= Confirm password:
+submitButton			= Submit
 
-confirmMismatch	= New passwords do not match.
-changeSuccess	= Password successfully changed.
-changeInvalid	= New password is not valid.
-notLoggedIn		= You are not logged in!
-changeDenied	= Current password is incorrect.
+confirmMismatch			= New passwords do not match.
+changeSuccess			= Password successfully changed.
+changeInvalid			= New password is not valid.
+notLoggedIn				= You are not logged in!
+changeDenied			= Current password is incorrect.
+
+addArticle				= Add article
+statusLabel				= The site must be one of the sites supported for parsing.
+statusLabelInvalid		= That isn't a valid URL!
+statusLabelNoParser		= No parser was found for that URL.
+statusLabelNoArticle	= The article parser rejected that URL as an invalid article.
+statusLabelFailed		= An article parser was found, but it threw an exception.
+urlLabel				= URL:
+addButton				= Add
