--- a/src/com/prealpha/extempdb/client/settings/SettingsMessages.properties
+++ b/src/com/prealpha/extempdb/client/settings/SettingsMessages.properties
@@ -30,7 +30,7 @@ changeDenied			= Current password is incorrect.
 
 addArticle				= Add article
 statusLabel				= The site must be one of the sites supported for parsing.
-statusLabelInvalid		= That isn't a valid URL!
+statusLabelInvalid		= That isn''t a valid URL!
 statusLabelNoParser		= No parser was found for that URL.
 statusLabelNoArticle	= The article parser rejected that URL as an invalid article.
 statusLabelFailed		= An article parser was found, but it threw an exception.
