--- a/build.xml
+++ b/build.xml
@@ -79,7 +79,7 @@
 			<fileset file="${dist.war}" />
 		</ftp>
 
-		<sshexec host="${deploy.server}" username="${deploy.username}" password="${deploy.password}" knownhosts="../known_hosts" command="mv ${deploy.dir}/${dist.war} ${deploy.dir}/ROOT.war; sudo /sbin/service tomcat6 restart" />
+		<sshexec host="${deploy.server}" username="${deploy.username}" password="${deploy.password}" knownhosts="../known_hosts" command="mv ${deploy.dir}/${ant.project.name}.war ${deploy.dir}/ROOT.war; sudo /usr/sbin/service tomcat6 restart" />
 	</target>
 
 </project>
