--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,26 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SLF4J API 1.6.1"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/warp-persist-r327"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/aopalliance.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/atunit-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/dozer-5.3.1.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/easymock-3.0.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/geronimo-jpa_2.0_spec-1.1.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/gin-1.0.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/gson-1.6.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/guava-r07.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/guava-r07-gwt.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/guice-2.0.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/guice-servlet-2.0.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/gwt-dispatch.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/httpclient-4.0.3.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/httpcore-4.0.1.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/jdom.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/jtidy-r1127.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/warp-persist-r327.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/asm-3.2.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/cglib-2.2.jar"/>
+	<classpathentry kind="lib" path="/home/ty/workspace/.lib/objenesis-1.2.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
