--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <!--
 	build.xml
-	Copyright (C) 2010 Meyer Kizner
+	Copyright (C) 2011 Meyer Kizner
 	All rights reserved.
 -->
 
@@ -33,17 +33,21 @@
 		<pathelement location="${gwt.home}/gwt-user.jar" />
 		<pathelement location="${gwt.home}/gwt-dev.jar" />
 
-		<!-- GIN, Guice -->
-		<pathelement location="${workspace}/gin-r137/out/dist/gin-1.0.jar" />
-		<pathelement location="${workspace}/guice-2.0/guice-2.0.jar" />
-		<pathelement location="${workspace}/guice-2.0/aopalliance.jar" />
+		<!-- GIN -->
+		<pathelement location="${workspace}/gin-1.5/out/dist/gin-1.5.jar" />
+		<pathelement location="${workspace}/guice-3.0/guice-assistedinject-3.0.jar" />
+
+		<!-- Guice -->
+		<pathelement location="${workspace}/guice-3.0/guice-3.0.jar" />
+		<pathelement location="${workspace}/guice-3.0/aopalliance.jar" />
+		<pathelement location="${workspace}/guice-3.0/javax.inject.jar" />
 
 		<!-- gwt-dispatch -->
 		<pathelement location="${workspace}/gwt-dispatch.jar" />
 
 		<!-- Guava -->
-		<pathelement location="${workspace}/guava-r07/guava-r07.jar" />
-		<pathelement location="${workspace}/guava-r07/guava-r07-gwt.jar" />
+		<pathelement location="${workspace}/guava-r08/guava-r08.jar" />
+		<pathelement location="${workspace}/guava-r08/guava-r08-gwt.jar" />
 		<pathelement location="${workspace}/jsr-305/ri/build/jsr305-gwt.jar" />
 	</path>
 
