Changed the UI "Browse" to "Jump".  It more accurately represents the action that is specified.  Instead of "browsing" for a tag, you are instead "jumping" to that tag.

--- a/src/com/prealpha/extempdb/client/core/CoreMessages.properties
+++ b/src/com/prealpha/extempdb/client/core/CoreMessages.properties
@@ -5,7 +5,7 @@
 title		= ExtempDB
 noscript	= You must have JavaScript enabled to view this site.
 
-browse		= Browse
+browse		= Jump
 hierarchy	= Hierarchy
 
 loading		= Loading...
