The Great Refractor

--- a/src/com/prealpha/extempdb/client/jump/JumpMessages.properties
+++ b/src/com/prealpha/extempdb/client/jump/JumpMessages.properties
@@ -1,8 +1,8 @@
-# BrowseMessages.properties
+# JumpMessages.properties
 # Copyright (C) 2010 Meyer Kizner
 # All rights reserved.
 
-heading			= Browse
+heading			= Jump
 
 showPatrolled	= patrolled
 showUnpatrolled	= unpatrolled
