--- a/src/com/prealpha/extempdb/client/core/CoreMessages.properties
+++ b/src/com/prealpha/extempdb/client/core/CoreMessages.properties
@@ -5,7 +5,7 @@
 title		= ExtempDB
 noscript	= You must have JavaScript enabled to view this site.
 
-browse		= Jump
+jump		= Jump
 hierarchy	= Hierarchy
 
 loading		= Loading...
