--- a/src/com/prealpha/extempdb/client/main/MainMessages.properties
+++ b/src/com/prealpha/extempdb/client/main/MainMessages.properties
@@ -10,7 +10,7 @@ logInHeading		= Log in
 logInText			= Passwords are case sensitive.
 logInTextPending	= Please wait...
 logInTextInvalid	= Invalid username/password.
-noCookies			= Cookies must be enabled in your browser in order to log \
+noCookies			= Cookies must be enabled in your jumpr in order to log \
 						in. Please enable cookies and refresh the page.
 
 aboutHeading		= About
@@ -22,7 +22,7 @@ aboutText			= ExtempDB is a database that catalogs articles for use in \
 
 usageHeading		= Usage
 usageText			= There currently two main means of navigating the database: \
-						the browse view and the hierarchy view. The browse view \
+						the jump view and the hierarchy view. The jump view \
 						allows you to navigate directly to a list of articles on \
 						a given topic; you must enter the topic name into the \
 						text box in the view. The hierarchy view presents all \
