Cleanup related to the refactoring

--- a/src/com/prealpha/extempdb/client/main/MainMessages.properties
+++ b/src/com/prealpha/extempdb/client/main/MainMessages.properties
@@ -10,7 +10,7 @@ logInHeading		= Log in
 logInText			= Passwords are case sensitive.
 logInTextPending	= Please wait...
 logInTextInvalid	= Invalid username/password.
-noCookies			= Cookies must be enabled in your jumpr in order to log \
+noCookies			= Cookies must be enabled in your browser in order to log \
 						in. Please enable cookies and refresh the page.
 
 aboutHeading		= About
