These should have no absolute path references now

--- a/log4j.dev.properties
+++ b/log4j.dev.properties
@@ -1,5 +1,5 @@
-# log4j.properties.dev
-# Copyright (C) 2010 Meyer Kizner
+# log4j.dev.properties
+# Copyright (C) 2011 Meyer Kizner
 # All rights reserved.
 
 log4j.rootLogger=WARN, console
