Removed presenters from tag input widget, refactor to use EventBus

--- a/src/com/prealpha/extempdb/client/taginput/TagInputMessages.properties
+++ b/src/com/prealpha/extempdb/client/taginput/TagInputMessages.properties
@@ -1,5 +1,5 @@
-# CommonMessages.properties
-# Copyright (C) 2010 Meyer Kizner
+# TagInputMessages.properties
+# Copyright (C) 2011 Meyer Kizner
 # All rights reserved.
 
 loadedAltText		= Loaded
