--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.prealpha</groupId>
@@ -15,13 +16,6 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>atunit</groupId>
-			<artifactId>atunit</artifactId>
-			<version>1.0.1</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/../atunit-1.0.1/atunit-1.0.1.jar</systemPath>
-		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
@@ -75,6 +69,18 @@
 			<artifactId>guice-servlet</artifactId>
 			<version>3.0</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.mycila.testing.plugins</groupId>
+			<artifactId>mycila-testing-easymock</artifactId>
+			<version>2.8</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.mycila.testing.plugins</groupId>
+			<artifactId>mycila-testing-guice2</artifactId>
+			<version>2.8</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.prealpha</groupId>
@@ -192,6 +198,16 @@
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.easymock</groupId>
+				<artifactId>easymockclassextension</artifactId>
+				<version>3.0</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<repositories>
 		<repository>
