--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.prealpha</groupId>
+			<artifactId>simple-http</artifactId>
+			<version>v2011062908</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
