--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>com.prealpha</groupId>
 	<artifactId>extempdb</artifactId>
-	<version>v2011062900</version>
+	<version>0.1-alpha</version>
 	<packaging>war</packaging>
 
 	<properties>
