--- a/client/src/main/webapp/WEB-INF/web.xml
+++ b/client/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,10 @@
 	</filter-mapping>
 
 	<listener>
+		<listener-class>com.prealpha.extempdb.server.Slf4jBridgeContextListener</listener-class>
+	</listener>
+
+	<listener>
 		<listener-class>com.prealpha.extempdb.server.ExtempDbContextListener</listener-class>
 	</listener>
 
