--- a/.project
+++ b/.project
@@ -16,12 +16,21 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1309826498209</id>
+			<id>1309843874527</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-false-false-client</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1309843874533</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-domain</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
