--- a/client/pom.xml
+++ b/client/pom.xml
@@ -86,6 +86,12 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.prealpha.extempdb</groupId>
+			<artifactId>domain</artifactId>
+			<version>${pom.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.16</version>
@@ -126,12 +132,6 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>3.6.5.Final</version>
 			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-jpamodelgen</artifactId>
-			<version>1.1.1.Final</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
