--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<packaging>pom</packaging>
 
 	<modules>
+		<module>central</module>
 		<module>client</module>
 		<module>domain</module>
 	</modules>
