--- a/central/src/main/config/META-INF/log4j.properties
+++ b/central/src/main/config/META-INF/log4j.properties
@@ -2,18 +2,12 @@
 # Copyright (C) 2011 Meyer Kizner
 # All rights reserved.
 
-log4j.rootLogger=WARN, server
+log4j.rootLogger=WARN, central
 
 log4j.logger.com.prealpha.extempdb=INFO
 
-log4j.appender.server=org.apache.log4j.rolling.RollingFileAppender
-log4j.appender.server.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
-log4j.appender.server.rollingPolicy.FileNamePattern=/var/log/tomcat6/extempdb.%d{yyyy-MM-dd}.log
-log4j.appender.server.layout=org.apache.log4j.PatternLayout
-log4j.appender.server.layout.ConversionPattern=%d{yyyy-MM-dd'T'HH:mm:ss.SSSZ} [%t] %-5p %c - %m%n
-
-log4j.appender.mobile=org.apache.log4j.rolling.RollingFileAppender
-log4j.appender.mobile.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
-log4j.appender.mobile.rollingPolicy.FileNamePattern=C:\\Program Files (x86)\\apache-tomcat-6.0.29\\logs\\extempdb.%d{yyyy-MM-dd}.log
-log4j.appender.mobile.layout=org.apache.log4j.PatternLayout
-log4j.appender.mobile.layout.ConversionPattern=%d{yyyy-MM-dd'T'HH:mm:ss.SSSZ} [%t] %-5p %c - %m%n
+log4j.appender.central=org.apache.log4j.rolling.RollingFileAppender
+log4j.appender.central.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
+log4j.appender.central.rollingPolicy.FileNamePattern=/var/log/tomcat6/extempdb.%d{yyyy-MM-dd}.log
+log4j.appender.central.layout=org.apache.log4j.PatternLayout
+log4j.appender.central.layout.ConversionPattern=%d{yyyy-MM-dd'T'HH:mm:ss.SSSZ} [%t] %-5p %c - %m%n
