--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>central</module>
 		<module>client</module>
 		<module>domain</module>
+		<module>util</module>
 	</modules>
 
 	<properties>
