Resolve errors related to util move (but not domain)

--- a/client/src/main/webapp/WEB-INF/web.xml
+++ b/client/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
 	</filter-mapping>
 
 	<listener>
-		<listener-class>com.prealpha.extempdb.server.Slf4jBridgeContextListener</listener-class>
+		<listener-class>com.prealpha.extempdb.util.logging.Slf4jBridgeContextListener</listener-class>
 	</listener>
 
 	<listener>
