--- a/client/pom.xml
+++ b/client/pom.xml
@@ -92,6 +92,12 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.prealpha.extempdb</groupId>
+			<artifactId>util</artifactId>
+			<version>${pom.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.16</version>
@@ -101,12 +107,6 @@
 			<groupId>net.sf.dozer</groupId>
 			<artifactId>dozer</artifactId>
 			<version>5.3.2</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.1.1</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -150,12 +150,6 @@
 			<artifactId>jcl-over-slf4j</artifactId>
 			<version>1.6.1</version>
 			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jul-to-slf4j</artifactId>
-			<version>1.6.1</version>
-			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
