--- a/.project
+++ b/.project
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1311887725857</id>
+			<id>1311891553328</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -25,7 +25,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1311887725843</id>
+			<id>1311891553333</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -34,12 +34,21 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1311887725853</id>
+			<id>1311891553338</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-false-false-domain</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1311891553344</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-util</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
