--- a/central/pom.xml
+++ b/central/pom.xml
@@ -9,9 +9,15 @@
 		<version>0.2-alpha</version>
 	</parent>
 	<artifactId>central</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-servlet</artifactId>
+			<version>3.0</version>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.prealpha.extempdb</groupId>
 			<artifactId>domain</artifactId>
@@ -49,5 +55,18 @@
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1.1</version>
+				<configuration>
+					<webappDirectory>${project.build.webappDirectory}</webappDirectory>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
