--- a/central/pom.xml
+++ b/central/pom.xml
@@ -13,6 +13,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>1.7.1</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.google.inject.extensions</groupId>
 			<artifactId>guice-persist</artifactId>
 			<version>3.0</version>
@@ -25,6 +31,18 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.mycila.testing.plugins</groupId>
+			<artifactId>mycila-testing-easymock</artifactId>
+			<version>2.8</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.mycila.testing.plugins</groupId>
+			<artifactId>mycila-testing-guice2</artifactId>
+			<version>2.8</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.prealpha.extempdb</groupId>
 			<artifactId>domain</artifactId>
 			<version>${pom.version}</version>
@@ -35,6 +53,18 @@
 			<artifactId>util</artifactId>
 			<version>${pom.version}</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.0</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -67,6 +97,16 @@
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.easymock</groupId>
+				<artifactId>easymockclassextension</artifactId>
+				<version>3.0</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
