--- a/central/pom.xml
+++ b/central/pom.xml
@@ -31,6 +31,12 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.158</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.mycila.testing.plugins</groupId>
 			<artifactId>mycila-testing-easymock</artifactId>
 			<version>2.8</version>
