Update the client for the new model. There is one unresolved issue: listing mappings by tag does not take the sort into account. This should be fixed soon once I get around to making ActionHandler reuse possible.

--- a/instance/src/main/resources/com/prealpha/extempdb/instance/client/article/ArticleMessages.properties
+++ b/instance/src/main/resources/com/prealpha/extempdb/instance/client/article/ArticleMessages.properties
@@ -2,11 +2,12 @@
 # Copyright (C) 2011 Meyer Kizner
 # All rights reserved.
 
-idLabel					= ID
-bylineLabel				= Byline
-dateLabel				= Date
-retrievalDateLabel		= Retrieved
-sourceLabel				= Source
-tagsLabel				= Tags
-addMappingButton		= Add...
-submitMappingButton		= Submit
+hashLabel			= Hash
+bylineLabel			= Byline
+dateLabel			= Date
+searchDateLabel		= Searched
+parseDateLabel		= Parsed
+sourceLabel			= Source
+tagsLabel			= Tags
+addMappingButton	= Add...
+submitMappingButton	= Submit
