--- a/instance/pom.xml
+++ b/instance/pom.xml
@@ -51,6 +51,12 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.158</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.mycila.testing.plugins</groupId>
 			<artifactId>mycila-testing-guice2</artifactId>
 			<version>2.8</version>
@@ -80,12 +86,6 @@
 			<artifactId>util</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.16</version>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.dozer</groupId>
