Articles are now added from main. Last function of settings is removed, so delete that view.

--- a/instance/src/main/resources/com/prealpha/extempdb/instance/client/main/MainMessages.properties
+++ b/instance/src/main/resources/com/prealpha/extempdb/instance/client/main/MainMessages.properties
@@ -2,20 +2,30 @@
 # Copyright (C) 2011 Meyer Kizner
 # All rights reserved.
 
-aboutHeading		= About
-aboutText			= ExtempDB is a database that catalogs articles for use in \
-						competitive extemporaneous speaking. It crawls through \
-						major news sites and stores articles for use in offline \
-						mode. This way, the articles are still available without \
-						internet access and thus within the competition rules.
+aboutHeading			= About
+aboutText				= ExtempDB is a database that catalogs articles for use \
+							in competitive extemporaneous speaking. It crawls \
+							through major news sites and stores articles for use \
+							in offline mode. This way, the articles are still \
+							available without internet access and thus within \
+							the competition rules.
 
-usageHeading		= Usage
-usageText			= There currently two main means of navigating the database: \
-						the jump view and the hierarchy view. The jump view \
-						allows you to navigate directly to a list of articles on \
-						a given topic; you must enter the topic name into the \
-						text box in the view. The hierarchy view presents all \
-						indexed topics in a hierarchical manner, providing a \
-						link to the list of relevant articles for each topic. \
-						The full text of each article is available from the \
-						article list.
+usageHeading			= Usage
+usageText				= There currently two main means of navigating the \
+							database: the jump view and the hierarchy view. The \
+							jump view allows you to navigate directly to a list \
+							of articles on a given topic; you must enter the \
+							topic name into the text box in the view. The \
+							hierarchy view presents all indexed topics in a \
+							hierarchical manner, providing a link to the list \
+							of relevant articles for each topic. The full text \
+							of each article is available from the article list.
+
+addArticleHeading		= Add article
+statusLabel				= The site must be one of the sites supported for parsing.
+statusLabelInvalid		= That isn''t a valid URL!
+statusLabelNoParser		= No parser was found for that URL.
+statusLabelNoArticle	= The article parser rejected that URL as an invalid article.
+statusLabelFailed		= An article parser was found, but it threw an exception.
+urlLabel				= URL:
+addButton				= Add
