--- a/.project
+++ b/.project
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1313117125184</id>
+			<id>1314541944351</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -25,7 +25,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1313117125190</id>
+			<id>1314541944356</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -34,7 +34,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1313117125202</id>
+			<id>1314541944360</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -43,7 +43,16 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1313117125197</id>
+			<id>1314541944365</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-launcher</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1314541944370</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
