Fix a bunch of references to the old name

--- a/instance/.project
+++ b/instance/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ExtempDB instance</name>
+	<name>Subitarius instance</name>
 	<comment></comment>
 	<projects>
 	</projects>
