--- a/instance/src/main/resources/com/subitarius/instance/client/core/CoreMessages.properties
+++ b/instance/src/main/resources/com/subitarius/instance/client/core/CoreMessages.properties
@@ -2,7 +2,7 @@
 # Copyright (C) 2011 Meyer Kizner
 # All rights reserved.
 
-title		= ExtempDB
+title		= Subitarius
 noscript	= You must have JavaScript enabled to view this site.
 
 jump		= Jump
