--- a/instance/src/main/resources/com/subitarius/instance/client/main/MainMessages.properties
+++ b/instance/src/main/resources/com/subitarius/instance/client/main/MainMessages.properties
@@ -3,12 +3,11 @@
 # All rights reserved.
 
 aboutHeading			= About
-aboutText				= ExtempDB is a database that catalogs articles for use \
-							in competitive extemporaneous speaking. It crawls \
-							through major news sites and stores articles for use \
-							in offline mode. This way, the articles are still \
-							available without internet access and thus within \
-							the competition rules.
+aboutText				= Subitarius is a database viewer for use in competitive \
+							extemporaneous speaking. Articles from major news \
+							sites are retrieved and stored for use offline. This \
+							way, the articles are still available without \
+							internet access and thus within the competition rules.
 
 usageHeading			= Usage
 usageText				= There currently two main means of navigating the \
