--- a/central/.project
+++ b/central/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ExtempDB central</name>
+	<name>Subitarius central</name>
 	<comment></comment>
 	<projects>
 	</projects>
