--- a/util/.project
+++ b/util/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ExtempDB util</name>
+	<name>Subitarius util</name>
 	<comment></comment>
 	<projects>
 	</projects>
