--- a/.project
+++ b/.project
@@ -16,7 +16,16 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1314541944351</id>
+			<id>1315691372454</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-action</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1315691372460</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -25,7 +34,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1314541944356</id>
+			<id>1315691372465</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -34,7 +43,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1314541944360</id>
+			<id>1315691372470</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -43,7 +52,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1314541944365</id>
+			<id>1315691372475</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -52,7 +61,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1314541944370</id>
+			<id>1315691372480</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
