--- a/instance/pom.xml
+++ b/instance/pom.xml
@@ -63,17 +63,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.prealpha</groupId>
-			<artifactId>gwt-dispatch</artifactId>
-			<version>v2011091017</version>
+			<groupId>com.subitarius</groupId>
+			<artifactId>action</artifactId>
+			<version>${project.version}</version>
 			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.prealpha</groupId>
-			<artifactId>gwt-dispatch</artifactId>
-			<version>v2011091017</version>
-			<classifier>sources</classifier>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.subitarius</groupId>
