We have to switch back to this way so that source code from gwt-dispatch and the action module doesn't leak into the distribution

--- a/instance/pom.xml
+++ b/instance/pom.xml
@@ -63,10 +63,30 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.prealpha</groupId>
+			<artifactId>gwt-dispatch</artifactId>
+			<version>v2011091017</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.prealpha</groupId>
+			<artifactId>gwt-dispatch</artifactId>
+			<version>v2011091017</version>
+			<classifier>sources</classifier>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.subitarius</groupId>
 			<artifactId>action</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.subitarius</groupId>
+			<artifactId>action</artifactId>
+			<version>${project.version}</version>
+			<classifier>sources</classifier>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.subitarius</groupId>
