--- a/instance/src/main/webapp/WEB-INF/web.xml
+++ b/instance/src/main/webapp/WEB-INF/web.xml
@@ -25,8 +25,7 @@
 
 	<!-- Default page to serve -->
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>module/index.jsp</welcome-file>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 
 </web-app>
