--- a/instance/pom.xml
+++ b/instance/pom.xml
@@ -164,7 +164,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.3.0</version>
+				<version>2.3.0-1</version>
 				<executions>
 					<execution>
 						<goals>
@@ -174,6 +174,7 @@
 				</executions>
 				<configuration>
 					<webappDirectory>${project.build.webappDirectory}</webappDirectory>
+					<deploy>${project.build.directory}/gwt-deploy</deploy>
 				</configuration>
 			</plugin>
 		</plugins>
