This is a bit simplistic, but it should work

--- a/instance/src/main/resources/com/subitarius/instance/client/main/MainMessages.properties
+++ b/instance/src/main/resources/com/subitarius/instance/client/main/MainMessages.properties
@@ -20,6 +20,9 @@ usageText				= There currently two main means of navigating the \
 							of relevant articles for each topic. The full text \
 							of each article is available from the article list.
 
+controlsHeading			= Controls
+fetchButton				= Fetch entities
+
 addArticleHeading		= Add article
 statusLabel				= The site must be one of the sites supported for parsing.
 statusLabelInvalid		= That isn''t a valid URL!
