Add a brief label for controls

--- a/instance/src/main/resources/com/subitarius/instance/client/main/MainMessages.properties
+++ b/instance/src/main/resources/com/subitarius/instance/client/main/MainMessages.properties
@@ -21,6 +21,10 @@ usageText				= There currently two main means of navigating the \
 							of each article is available from the article list.
 
 controlsHeading			= Controls
+controlsText			= These operations will take some time to complete, \
+							depending on the volume of data that needs to be \
+							processed. There is no status indicator at the \
+							moment.
 fetchButton				= Fetch entities
 
 addArticleHeading		= Add article
