Some amazing UI here for the article parsing

--- a/instance/src/main/resources/com/subitarius/instance/client/main/MainMessages.properties
+++ b/instance/src/main/resources/com/subitarius/instance/client/main/MainMessages.properties
@@ -26,6 +26,7 @@ controlsText			= These operations will take some time to complete, \
 							processed. There is no status indicator at the \
 							moment.
 fetchButton				= Fetch entities
+parseButton				= Parse articles
 
 addArticleHeading		= Add article
 statusLabel				= The site must be one of the sites supported for parsing.
