Tweak the log levels printed a bit

--- a/launcher/src/main/config/log4j.properties
+++ b/launcher/src/main/config/log4j.properties
@@ -4,6 +4,8 @@
 
 log4j.rootLogger=WARN, launcher
 
+log4j.logger.com.subitarius=INFO
+
 log4j.appender.launcher=org.apache.log4j.rolling.RollingFileAppender
 log4j.appender.launcher.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
 log4j.appender.launcher.rollingPolicy.FileNamePattern=./log/subitarius.%d{yyyy-MM-dd}.log
