Handle server exceptions differently from client exceptions

--- a/instance/src/main/resources/com/subitarius/instance/client/error/ErrorMessages.properties
+++ b/instance/src/main/resources/com/subitarius/instance/client/error/ErrorMessages.properties
@@ -3,6 +3,7 @@
 # All rights reserved.
 
 heading				= Oops!
-exception			= An exception was caught by the exception handler. This means there was either a problem fetching data from the server, or there was an unhandled failure somewhere in the client code. In particular, the server may have gone offline since the client was loaded. If you are sure the server is still accessible, there is probably a bug, and you should send the following to the code monkeys, along with a description of what you were doing when this message appeared:
+exception			= An exception was caught by the exception handler. This means there was an unhandled failure somewhere in the client code. This is probably a bug, and you should send the following to the code monkeys, along with a description of what you were doing when this message appeared:
+serverException		= An attempt to fetch data from the server failed. Unless the server has gone offline, there is probably an error in the server logs. Please send the relevant log messages to the code monkeys.
 incompatibleService	= The application has been updated since you loaded this page. Please refresh the page to continue.
 back				= Go back
