--- a/action/pom.xml
+++ b/action/pom.xml
@@ -21,9 +21,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.prealpha</groupId>
-			<artifactId>gwt-dispatch</artifactId>
-			<version>v2011091017</version>
+			<groupId>com.prealpha.xylophone</groupId>
+			<artifactId>xylophone</artifactId>
+			<version>0.2-beta</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
