Update assembly configuration for a plugin update

--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -44,6 +44,7 @@
 				</executions>
 				<configuration>
 					<finalName>subitarius-${project.version}</finalName>
+					<appendAssemblyId>false</appendAssemblyId>
 					<descriptors>
 						<descriptor>src/main/assembly/assembly.xml</descriptor>
 					</descriptors>
